<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AirSharing</string>
    <string name="home">홈</string>
    <string name="dashboard">대시보드</string>
    <string name="map">지도</string>
    <string name="community">커뮤니티</string>
    <string name="setting">설정</string>

    <!-- map-->
    <string name="button_area">지역별 미세먼지 지도</string>
    <string name="button_location">사용자 위치 기반 지도</string>
    <string name="title_activity_maps">Map</string>

    <string name="menu4">Settings</string>
    <string name="title">AIRSHARING</string>
    <string name="id">ID</string>
    <string name="pw">PW</string>
    <string name="name">이름</string>
    <string name="email">이메일</string>
    <string name="phone">연락처</string>
    <string name="gender">성별</string>
    <string name="m">남자</string>
    <string name="f">여자</string>
    <string name="signup">가입하기</string>
    <string name="findid">아이디를 잊어버리셨나요?</string>
    <string name="findpw">비밀번호를 잊어버리셨나요?</string>
    <string name="cycle">당신의 주기를 선택하세요</string>
    <string-array name="cycle_time">
        <item> 10분 </item>
        <item> 20분 </item>
        <item> 30분 </item>
        <item> 1시간 </item>
        <item> 2시간 </item>
        <item> 3시간 </item>
        <item> 4시간 </item>
    </string-array>

    <!-- community-->
    <string name="write_content">게시글 작성하기</string>
    <string name="empty_board">게시글이 존재하지 않습니다.</string>

    <!-- upload -->
    <string name="region">지역</string>
    <string name="select">선택하세요</string>
    <string name="explain_dust">가장 최근에 측정한 미세먼지 값이 같이 업로드 됩니다.</string>
    <string name="content_hint">당신이 느낀 오늘의 공기질이나 날씨에 대해 설명해주세요!</string>
    <string name="upload_button">업로드 하기</string>
</resources>
