<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorMain">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="18dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="35dp"
                android:layout_height="23dp"
                android:src="@drawable/cloud" />

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/text_empty_board"
        android:layout_below="@+id/actionBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:textSize="25sp"
        android:textColor="@color/colorAccent"
        android:text="@string/empty_board"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/write"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button3"
        android:text="@string/write_content"
        android:textSize="20sp"
        android:textColor="@color/colorWhite" />
</RelativeLayout>