<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg">

    <RelativeLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorMain">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="18dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="35dp"
                android:layout_height="23dp"
                android:src="@drawable/cloud" />

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

    <ScrollView
        android:layout_below="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

        <RelativeLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/content_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/region"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/content_title" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/spinner" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout2"
                android:layout_below="@id/layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/explain_dust"
                    android:textSize="16sp"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />
            </RelativeLayout>


            <EditText
                android:padding="20dp"
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@id/layout2"
                android:layout_marginTop="20dp"
                android:background="@drawable/textbox"
                android:textSize="16sp"
                android:hint="@string/content_hint" />

            <Button
                android:id="@+id/upload_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="35dp"
                android:background="@drawable/button3"
                android:text="@string/upload_button"
                android:textColor="@color/colorWhite" />


        </RelativeLayout>

    </ScrollView>

</RelativeLayout>