<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="8.5"
        android:background="#99ccff">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginLeft="90dp"
            android:src="@drawable/cloud" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="-10dp"
            android:text="@string/title"
            android:textColor="#ffffff"
            android:textSize="80px"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_weight="8.5"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn1"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:background="@drawable/button3"
            android:text="@string/button_area"
            android:textColor="#ffffff"
            android:textSize="14dp" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button3"
            android:text="@string/button_location"
            android:textColor="#ffffff"
            android:textSize="14dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5">


    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity" />
</LinearLayout>

</LinearLayout>