<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="9"
        android:background="#99ccff"
        android:weightSum="1">

        <ImageView
            android:layout_width="100px"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginLeft="390px"
            android:layout_weight="0.09"
            android:src="@drawable/cloud" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="AIRSHARING"
            android:textColor="#ffffff"
            android:textSize="80px"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <Button
                android:id="@+id/btnCO2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CO2"
                android:layout_weight="1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CO"
                android:id="@+id/btnCO"
                android:layout_weight="1"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="O2"
                android:id="@+id/btnO2"
                android:layout_weight="1"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="dust"
                android:id="@+id/btnDust"
                android:layout_weight="1"/>
        </LinearLayout>

        <WebView
            android:id="@+id/webView"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <Button
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/button_gray"
                android:text="@string/home"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/dashboard"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/button_gray"
                android:text="@string/dashboard"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/map"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/button_gray"
                android:text="@string/map"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/community"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/button_gray"
                android:text="@string/community"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/button_gray"
                android:text="@string/setting"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>