<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9966"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorMain">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="18dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="35dp"
                android:layout_height="23dp"
                android:src="@drawable/cloud" />

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/actionBar">

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:text="공기SHARE"
                    android:textColor="@color/colorBlack"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="30dp"
                    android:text="당신의 공기를"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="30dp"
                    android:text="다른 사람과"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="30dp"
                    android:text="공유하세요"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/ic_create_new_pencil_button" />

        </LinearLayout>

        <Button
            android:id="@+id/select_region_button"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_below="@+id/layout1"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:background="@drawable/community_button"
            android:text="지역 선택"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/write_content_button"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_below="@+id/select_region_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/community_button"
            android:text="@string/write_content"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/write_content_button"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="135dp"
                android:layout_height="135dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/ic_smartphone" />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/talk" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout2"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_gray"
                android:text="@string/home"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/dashboard"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_gray"
                android:text="@string/dashboard"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/map"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_gray"
                android:text="@string/map"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/community"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_gray"
                android:text="@string/community"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_gray"
                android:text="@string/setting"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>